--- a/Charts/openebs/templates/deployment-maya-apiserver.yaml
+++ b/Charts/openebs/templates/deployment-maya-apiserver.yaml
@@ -34,7 +34,7 @@ spec:
       serviceAccountName: {{ template "openebs.serviceAccountName" . }}
       containers:
       - name: {{ template "openebs.name" . }}-apiserver
-        image: "{{ .Values.image.repository }}{{ .Values.apiserver.image }}:{{ .Values.apiserver.imageTag }}"
+        image: "{{ .Values.apiserver.image.organization }}/{{ .Values.apiserver.image.repository }}:{{ .Values.apiserver.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.apiserver.ports.internalPort }}
