--- a/Charts/elasticsearch/values.yaml
+++ b/Charts/elasticsearch/values.yaml
@@ -43,7 +43,7 @@ secretMounts: []
 #    path: /usr/share/elasticsearch/config/certs
 
 image:
-  organization: nkubeio
+  organization: ghcr.io/neonrelease
   repository: cluster-elasticsearch
   tag: latest
   pullPolicy: Always
