--- a/Charts/fluent-bit/values.yaml
+++ b/Charts/fluent-bit/values.yaml
@@ -3,7 +3,7 @@
 on_minikube: false
 
 image:
-  organization: nkubeio
+  organization: ghcr.io/neonrelease
   repository: neon-log-host
   tag: latest
   pullPolicy: Always
