--- a/Charts/openebs/templates/deployment-local-provisioner.yaml
+++ b/Charts/openebs/templates/deployment-local-provisioner.yaml
@@ -33,7 +33,7 @@ spec:
       serviceAccountName: {{ template "openebs.serviceAccountName" . }}
       containers:
       - name: {{ template "openebs.name" . }}-localpv-provisioner
-        image: "{{ .Values.image.repository }}{{ .Values.localprovisioner.image }}:{{ .Values.localprovisioner.imageTag }}"
+        image: "{{ .Values.localprovisioner.image.organization }}/{{ .Values.localprovisioner.image.repository }}:{{ .Values.localprovisioner.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         # OPENEBS_IO_K8S_MASTER enables openebs provisioner to connect to K8s
