--- a/Charts/openebs/templates/deployment-maya-snapshot-operator.yaml
+++ b/Charts/openebs/templates/deployment-maya-snapshot-operator.yaml
@@ -33,7 +33,7 @@ spec:
       serviceAccountName: {{ template "openebs.serviceAccountName" . }}
       containers:
       - name: {{ template "openebs.name" . }}-snapshot-controller
-        image: "{{ .Values.image.repository }}{{ .Values.snapshotOperator.controller.image }}:{{ .Values.snapshotOperator.controller.imageTag }}"
+        image: "{{ .Values.snapshotOperator.controller.image.organization }}/{{ .Values.snapshotOperator.controller.image.repository }}:{{ .Values.snapshotOperator.controller.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         # OPENEBS_IO_K8S_MASTER enables openebs snapshot controller to connect to K8s
@@ -75,7 +75,7 @@ spec:
           initialDelaySeconds: {{ .Values.snapshotOperator.healthCheck.initialDelaySeconds }}
           periodSeconds: {{ .Values.snapshotOperator.healthCheck.periodSeconds }}
       - name: {{ template "openebs.name" . }}-snapshot-provisioner
-        image: "{{ .Values.image.repository }}{{ .Values.snapshotOperator.provisioner.image }}:{{ .Values.snapshotOperator.provisioner.imageTag }}"
+        image: "{{ .Values.snapshotOperator.provisioner.image.organization }}/{{ .Values.snapshotOperator.provisioner.image.repository }}:{{ .Values.snapshotOperator.provisioner.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         # OPENEBS_IO_K8S_MASTER enables openebs snapshot provisioner to connect to K8s
