updated some helm charts to use new images

--- a/Charts/cortex/templates/deployment.yaml
+++ b/Charts/cortex/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
       {{- end}}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.organization }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - "-config.file=/etc/cortex/cortex.yaml"
