--- a/Charts/neon-cluster-manager/templates/deployment.yaml
+++ b/Charts/neon-cluster-manager/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       serviceAccount: neon-cluster-manager
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.organization }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: LOG_LEVEL
