--- a/Charts/citus-postgresql/values.yaml
+++ b/Charts/citus-postgresql/values.yaml
@@ -4,7 +4,7 @@ imagePullSecrets: ""
 
 image:
   organization: ghcr.io/neonrelease
-  repository: cluster-citus
+  repository: citusdata-citus
   tag: latest
   pullPolicy: Always
 
@@ -64,7 +64,7 @@ manager:
   replicas: 3
   image:
     organization: ghcr.io/neonrelease
-    repository: cluster-citus
+    repository: bakdata-citus-membership-manager
     tag: latest
     pullPolicy: Always
   resources:
