--- a/Charts/elasticsearch/values.yaml
+++ b/Charts/elasticsearch/values.yaml
@@ -44,7 +44,7 @@ secretMounts: []
 
 image:
   organization: ghcr.io/neonrelease
-  repository: cluster-elasticsearch
+  repository: elasticsearch
   tag: latest
   pullPolicy: Always
 
