--- a/Charts/openebs/templates/deployment-local-provisioner.yaml
+++ b/Charts/openebs/templates/deployment-local-provisioner.yaml
@@ -69,7 +69,7 @@ spec:
         - name: OPENEBS_IO_BASE_PATH
           value: "{{ .Values.localprovisioner.basePath }}"
         - name: OPENEBS_IO_HELPER_IMAGE
-          value: "{{ .Values.image.repository }}{{ .Values.helper.image }}:{{ .Values.helper.imageTag }}"
+          value: "{{ .Values.helper.image.organization }}/{{ .Values.helper.image.repository }}:{{ .Values.helper.image.tag }}"
         - name: OPENEBS_IO_INSTALLER_TYPE
           value: "charts-helm"
         # LEADER_ELECTION_ENABLED is used to enable/disable leader election. By default
