--- a/Charts/openebs/templates/deployment-ndm-operator.yaml
+++ b/Charts/openebs/templates/deployment-ndm-operator.yaml
@@ -61,7 +61,7 @@ spec:
         - name: OPERATOR_NAME
           value: "node-disk-operator"
         - name: CLEANUP_JOB_IMAGE
-          value: "{{ .Values.image.repository }}{{ .Values.helper.image }}:{{ .Values.helper.imageTag }}"
+          value: "{{ .Values.helper.image.organization }}/{{ .Values.helper.image.repository }}:{{ .Values.helper.image.tag }}"
         # OPENEBS_IO_INSTALL_CRD environment variable is used to enable/disable CRD installation
         # from NDM Operator. By default the CRDs will be installed
         - name: OPENEBS_IO_INSTALL_CRD
