--- a/Charts/kiali/values.yaml
+++ b/Charts/kiali/values.yaml
@@ -52,7 +52,7 @@ cr:
   namespace: ""
 
   spec:
-    version: "1.27"
+    version: "v1.24"
     istio_namespace: istio-system
     deployment:
       image_name: quay.io/kiali/kiali
