--- a/Charts/kibana/templates/deployment.yaml
+++ b/Charts/kibana/templates/deployment.yaml
@@ -93,8 +93,7 @@ spec:
                     if [ -n "${ELASTIC_USERNAME}" ] && [ -n "${ELASTIC_PASSWORD}" ]; then
                       set -- "$@" -u "${ELASTIC_USERNAME}:${ELASTIC_PASSWORD}"
                     fi
-
-                    curl -k "$@" "{{ .Values.protocol }}://localhost:{{ .Values.httpPort }}${path}"
+                    wget -O /dev/null "$@" "{{ .Values.protocol }}://localhost:{{ .Values.httpPort }}${path}" >/dev/null 2>&1;
                 }
 
                 http "{{ .Values.healthCheckPath }}"
