added common scripts to cluster-ubuntu

--- a/Images/cluster-ubuntu/Dockerfile
+++ b/Images/cluster-ubuntu/Dockerfile
@@ -27,3 +27,6 @@ ARG         UBUNTU_TAG
 FROM        ${ORGANIZATION}/ubuntu:${UBUNTU_TAG}
 MAINTAINER  jeff@lilltek.com
 STOPSIGNAL  SIGTERM
+
+COPY _common/*.sh           /
+RUN chmod 700 /*.sh
