works with new cluster-aspnet image

--- a/Images/neon-cluster-manager/Dockerfile
+++ b/Images/neon-cluster-manager/Dockerfile
@@ -39,9 +39,6 @@ ARG         APPNAME
 COPY bin/__dep              /usr/bin/$APPNAME.dotnet/
 RUN echo ** NEW LAYER **
 
-ENV TZ=UTC
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
 # App files.
 
 COPY bin/__app              /usr/bin/$APPNAME.dotnet/
@@ -52,4 +49,4 @@ RUN chmod 700 /docker-entrypoint.sh \
     && echo "exec dotnet /usr/bin/$APPNAME.dotnet/$APPNAME.dll \"\$@\"" >> /usr/bin/$APPNAME \
     && chmod 770 /usr/bin/$APPNAME
 
-ENTRYPOINT ["/sbin/tini", "-g", "--", "/docker-entrypoint.sh"]
+ENTRYPOINT ["tini", "-g", "--", "/docker-entrypoint.sh"]
