migrate to td-agent in progress

--- a/Images/neon-log-collector/conf/general.conf
+++ b/Images/neon-log-collector/conf/general.conf
@@ -1,7 +1,7 @@
-# Prevent fluentd from handling records containing its own logs. Otherwise
+# Prevent td-agent from handling records containing its own logs. Otherwise
 # it can lead to an infinite loop, when error in sending one message generates
 # another message which also fails to be sent and so on.
-<match fluentd.**>
+<match td.**>
   @type null
 </match>
 
@@ -19,5 +19,5 @@
   @type monitor_agent
   bind 0.0.0.0
   port 24220
-  tag fluentd.monitor.metrics
+  tag td-agent.monitor.metrics
 </source>
