--- a/Images/neon-log-host/conf/td-agent-bit-output.conf
+++ b/Images/neon-log-host/conf/td-agent-bit-output.conf
@@ -1,6 +1,6 @@
 [OUTPUT]
     Name          forward
     Match         *
-    Host          fluentd.monitoring
+    Host          neon-log-collector-fluentd.monitoring
     Port          24224
     Retry_Limit   5
