--- a/Charts/harbor/templates/clair/clair-dpl.yaml
+++ b/Charts/harbor/templates/clair/clair-dpl.yaml
@@ -39,7 +39,7 @@ spec:
       {{- end }}
       containers:
       - name: clair
-        image: {{ .Values.clair.clair.image.repository }}:{{ .Values.clair.clair.image.tag }}
+        image: "{{ .Values.clair.clair.image.organization }}/{{ .Values.clair.clair.image.repository }}:{{ .Values.clair.clair.image.tag }}"
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         livenessProbe:
           httpGet:
@@ -81,7 +81,7 @@ spec:
 {{ include "harbor.caBundleVolumeMount" . | indent 8 }}
         {{- end }}
       - name: adapter
-        image: {{ .Values.clair.adapter.image.repository }}:{{ .Values.clair.adapter.image.tag }}
+        image: "{{ .Values.clair.adapter.image.organization }}/{{ .Values.clair.adapter.image.repository }}:{{ .Values.clair.adapter.image.tag }}"
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         livenessProbe:
           httpGet:
