--- a/Charts/harbor/templates/core/core-dpl.yaml
+++ b/Charts/harbor/templates/core/core-dpl.yaml
@@ -40,7 +40,7 @@ spec:
       {{- end }}
       containers:
       - name: core
-        image: {{ .Values.core.image.repository }}:{{ .Values.core.image.tag }}
+        image: "{{ .Values.core.image.organization }}/{{ .Values.core.image.repository }}:{{ .Values.core.image.tag }}"
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         livenessProbe:
           httpGet:
