--- a/Charts/harbor/templates/notary/notary-signer.yaml
+++ b/Charts/harbor/templates/notary/notary-signer.yaml
@@ -31,7 +31,7 @@ spec:
       {{- end }}
       containers:
       - name: notary-signer
-        image: {{ .Values.notary.signer.image.repository }}:{{ .Values.notary.signer.image.tag }}
+        image: "{{ .Values.notary.signer.image.organization }}/{{ .Values.notary.signer.image.repository }}:{{ .Values.notary.signer.image.tag }}"
         imagePullPolicy: {{ .Values.imagePullPolicy }}
 {{- if .Values.notary.signer.resources }}
         resources:
