--- a/Charts/harbor/templates/trivy/trivy-sts.yaml
+++ b/Charts/harbor/templates/trivy/trivy-sts.yaml
@@ -44,7 +44,7 @@ spec:
       automountServiceAccountToken: true
       containers:
         - name: trivy
-          image: {{ .Values.trivy.image.repository }}:{{ .Values.trivy.image.tag }}
+          image: "{{ .Values.trivy.image.organization }}/{{ .Values.trivy.image.repository }}:{{ .Values.trivy.image.tag }}"
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           securityContext:
             privileged: false
